Expose SpotfireApplication Prepare for 0.12.0

--- a/package.json
+++ b/package.json
@@ -20,45 +20,45 @@
   "author": "Nicolas Deroche <nderoche@tibco.com> (http://www.tibco.com)",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.9",
-    "@angular/cdk": "^10.1.2",
-    "@angular/common": "^10.0.9",
-    "@angular/compiler": "^10.0.9",
-    "@angular/core": "^10.0.9",
-    "@angular/elements": "^10.0.9",
-    "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "^10.0.9",
-    "@angular/material": "^10.1.2",
-    "@angular/platform-browser": "^10.0.9",
-    "@angular/platform-browser-dynamic": "^10.0.9",
+    "@angular/animations": "~10.1.1",
+    "@angular/cdk": "~10.2.0",
+    "@angular/common": "~10.1.1",
+    "@angular/compiler": "~10.1.1",
+    "@angular/core": "~10.1.1",
+    "@angular/elements": "~10.1.1",
+    "@angular/flex-layout": "~10.0.0-beta.32",
+    "@angular/forms": "~10.1.1",
+    "@angular/material": "~10.2.0",
+    "@angular/platform-browser": "~10.1.1",
+    "@angular/platform-browser-dynamic": "~10.1.1",
     "@webcomponents/custom-elements": "*",
-    "core-js": "^3.6.4",
-    "rxjs": "^6.6.2",
-    "tslib": "^2.0.0",
+    "core-js": "~3.6.4",
+    "rxjs": "~6.6.3",
+    "tslib": "~2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.6",
-    "@angular-devkit/build-ng-packagr": "^0.1000.6",
-    "@angular/cli": "^10.0.6",
-    "@angular/compiler-cli": "^10.0.9",
-    "@types/jasmine": "^3.5.6",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "concat": "^1.0.3",
-    "cpx": "^1.5.0",
-    "fs-extra": "^8.1.0",
+    "@angular-devkit/build-angular": "^0.1000.8",
+    "@angular-devkit/build-ng-packagr": "^0.1000.8",
+    "@angular/cli": "~10.1.1",
+    "@angular/compiler-cli": "~10.1.1",
+    "@types/jasmine": "~3.5.14",
+    "@types/node": "~12.12.57",
+    "codelyzer": "~6.0.0",
+    "concat": "~1.0.3",
+    "cpx": "~1.5.0",
+    "fs-extra": "~8.1.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^10.0.4",
-    "ts-node": "^8.6.2",
+    "karma-jasmine-html-reporter": "~1.5.0",
+    "ng-packagr": "~10.1.0",
+    "ts-node": "~8.6.2",
     "tslint": "~6.1.0",
-    "typescript": "3.9.7"
+    "typescript": "~4.0.2"
   },
   "repository": {
     "type": "git",
@@ -66,13 +66,12 @@
   },
   "homepage": "https://github.com/TIBCOSoftware/spotfire-wrapper",
   "description": "Wrapper for TIBCO Spotfire(R) library and package.",
-  "bugs": {
-    "url": "https://github.com/TIBCOSoftware/spotfire-wrapper/issues"
-  },
+  "bugs": "https://github.com/TIBCOSoftware/spotfire-wrapper/issues",
   "main": "build-script.js",
   "keywords": [
     "TIBCO",
-    "Spotfire"
+    "Spotfire",
+    "Angular"
   ],
   "license": "BSD-3-Clause"
 }
