--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.8",
-    "@angular-devkit/build-ng-packagr": "^0.1000.8",
+    "@angular-devkit/build-angular": "~0.1001.1",
+    "@angular-devkit/build-ng-packagr": "~0.1001.1",
     "@angular/cli": "~10.1.1",
     "@angular/compiler-cli": "~10.1.1",
     "@types/jasmine": "~3.5.14",
