Prepared for v0.13.0 Upgrade to Angular 10.1.6

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_STORE
 
-/dist/
+dist/
 /bazel-out
 /integration/bazel/bazel-*
 node_modules
@@ -37,4 +37,5 @@ yarn-error.log
 
 # js files
 # *.js
-!dist/spotfire-wrapper.js
+!*/spotfire-wrapper.js
+
