--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,6 @@
               "optimization": true,
               "outputHashing": "none",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
@@ -204,7 +203,7 @@
       "prefix": "tibco",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/spotfire-wrapper/tsconfig.lib.json",
             "project": "projects/spotfire-wrapper/ng-package.json"
