--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotfire-wrapper",
-  "version": "0.13.0",
+  "version": "0.14.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,45 +20,45 @@
   "author": "Nicolas Deroche <nderoche@tibco.com> (http://www.tibco.com)",
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.6",
-    "@angular/cdk": "~10.2.5",
-    "@angular/common": "~10.1.6",
-    "@angular/compiler": "~10.1.6",
-    "@angular/core": "~10.1.6",
-    "@angular/elements": "~10.1.6",
-    "@angular/flex-layout": "~10.0.0-beta.32",
-    "@angular/forms": "~10.1.6",
-    "@angular/material": "~10.2.5",
-    "@angular/platform-browser": "~10.1.6",
-    "@angular/platform-browser-dynamic": "~10.1.6",
-    "@webcomponents/custom-elements": "*",
-    "core-js": "~3.6.4",
-    "rxjs": "~6.6.3",
-    "tslib": "~2.0.3",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "~11.1.1",
+    "@angular/cdk": "~11.1.1",
+    "@angular/common": "~11.1.1",
+    "@angular/compiler": "~11.1.1",
+    "@angular/core": "~11.1.1",
+    "@angular/elements": "~11.1.1",
+    "@angular/flex-layout": "~11.0.0-beta.33",
+    "@angular/forms": "~11.1.1",
+    "@angular/material": "~11.1.1",
+    "@angular/platform-browser": "~11.1.1",
+    "@angular/platform-browser-dynamic": "~11.1.1",
+    "@webcomponents/custom-elements": "~1.4.3",
+    "rxjs": "~6.6.0",
+    "tslib": "~2.1.0",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.7",
-    "@angular-devkit/build-ng-packagr": "~0.1001.7",
-    "@angular/cli": "~10.1.7",
-    "@angular/compiler-cli": "~10.1.6",
-    "@types/jasmine": "~3.5.14",
-    "@types/node": "~12.12.67",
-    "codelyzer": "~6.0.1",
+    "@angular-devkit/architect": "^0.1101.2",
+    "@angular-devkit/core": "^11.1.2",
+    "@angular-devkit/build-angular": "^0.1101.2",
+    "@angular/cli": "~11.1.2",
+    "@angular/compiler-cli": "~11.1.1",
+    "@types/jasmine": "~3.6.0",
+    "@types/node": "~14.14.22",
+    "codelyzer": "~6.0.0",
     "concat": "~1.0.3",
     "cpx": "~1.5.0",
-    "fs-extra": "~8.1.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "fs-extra": "~9.1.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~6.0.0",
+    "karma": "~6.0.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.5.0",
-    "ng-packagr": "~10.1.2",
-    "ts-node": "~8.6.2",
+    "ng-packagr": "~11.1.2",
+    "ts-node": "~9.1.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.3"
+    "typescript": "~4.1.2"
   },
   "repository": {
     "type": "git",
