Migrate TSlint to ESLint

--- a/angular.json
+++ b/angular.json
@@ -81,14 +81,11 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
             ]
           }
         }
@@ -207,13 +204,13 @@
           "options": {
             "tsConfig": "projects/spotfire-wrapper/tsconfig.lib.json",
             "project": "projects/spotfire-wrapper/ng-package.json"
-          }
-        ,          "configurations": {
+          },
+          "configurations": {
             "production": {
               "tsConfig": "projects/spotfire-wrapper/tsconfig.lib.prod.json"
             }
           }
-},
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -223,14 +220,11 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "projects/spotfire-wrapper/tsconfig.lib.json",
-              "projects/spotfire-wrapper/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
+            "lintFilePatterns": [
+              "projects/spotfire-wrapper/**/*.ts",
+              "projects/spotfire-wrapper/**/*.html"
             ]
           }
         }
