--- a/package.json
+++ b/package.json
@@ -37,16 +37,27 @@
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1101.2",
-    "@angular-devkit/core": "^11.1.2",
+    "@angular-devkit/architect": "~0.1100.1",
     "@angular-devkit/build-angular": "^0.1101.2",
+    "@angular-devkit/core": "^11.1.2",
+    "@angular-eslint/builder": "1.1.0",
+    "@angular-eslint/eslint-plugin": "1.1.0",
+    "@angular-eslint/eslint-plugin-template": "1.1.0",
+    "@angular-eslint/schematics": "1.1.0",
+    "@angular-eslint/template-parser": "1.1.0",
     "@angular/cli": "~11.1.2",
     "@angular/compiler-cli": "~11.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "~14.14.22",
+    "@typescript-eslint/eslint-plugin": "4.14.1",
+    "@typescript-eslint/parser": "4.14.1",
     "codelyzer": "~6.0.0",
     "concat": "~1.0.3",
     "cpx": "~1.5.0",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "31.4.0",
+    "eslint-plugin-prefer-arrow": "1.2.3",
     "fs-extra": "~9.1.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
