--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotfire-wrapper",
-  "version": "0.14.1",
+  "version": "0.14.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,56 +20,56 @@
   "author": "Nicolas Deroche <nderoche@tibco.com> (http://www.tibco.com)",
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.1.1",
-    "@angular/cdk": "~11.1.1",
-    "@angular/common": "~11.1.1",
-    "@angular/compiler": "~11.1.1",
-    "@angular/core": "~11.1.1",
-    "@angular/elements": "~11.1.1",
-    "@angular/flex-layout": "~11.0.0-beta.33",
-    "@angular/forms": "~11.1.1",
-    "@angular/material": "~11.1.1",
-    "@angular/platform-browser": "~11.1.1",
-    "@angular/platform-browser-dynamic": "~11.1.1",
-    "@webcomponents/custom-elements": "~1.4.3",
-    "rxjs": "~6.6.0",
-    "tslib": "~2.1.0",
-    "zone.js": "~0.11.3"
+    "@angular/animations": "^11.2.6",
+    "@angular/cdk": "^11.2.5",
+    "@angular/common": "^11.2.6",
+    "@angular/compiler": "^11.2.6",
+    "@angular/core": "^11.2.6",
+    "@angular/elements": "^11.2.6",
+    "@angular/flex-layout": "^11.0.0-beta.33",
+    "@angular/forms": "^11.2.6",
+    "@angular/material": "^11.2.5",
+    "@angular/platform-browser": "^11.2.6",
+    "@angular/platform-browser-dynamic": "^11.2.6",
+    "@webcomponents/custom-elements": "^1.4.3",
+    "rxjs": "^6.6.6",
+    "tslib": "^2.1.0",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "~0.1100.1",
-    "@angular-devkit/build-angular": "^0.1101.2",
-    "@angular-devkit/core": "^11.1.2",
-    "@angular-eslint/builder": "1.1.0",
-    "@angular-eslint/eslint-plugin": "1.1.0",
-    "@angular-eslint/eslint-plugin-template": "1.1.0",
-    "@angular-eslint/schematics": "1.1.0",
-    "@angular-eslint/template-parser": "1.1.0",
-    "@angular/cli": "~11.1.2",
-    "@angular/compiler-cli": "~11.1.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "~14.14.22",
-    "@typescript-eslint/eslint-plugin": "4.14.1",
-    "@typescript-eslint/parser": "4.14.1",
-    "codelyzer": "~6.0.0",
-    "concat": "~1.0.3",
-    "cpx": "~1.5.0",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "31.4.0",
-    "eslint-plugin-prefer-arrow": "1.2.3",
-    "fs-extra": "~9.1.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~6.0.0",
-    "karma": "~6.0.3",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.5.0",
-    "ng-packagr": "~11.1.2",
-    "ts-node": "~9.1.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.2"
+    "@angular-devkit/architect": "^0.1102.5",
+    "@angular-devkit/build-angular": "^0.1102.5",
+    "@angular-devkit/core": "^11.2.5",
+    "@angular-eslint/builder": "^2.0.2",
+    "@angular-eslint/eslint-plugin": "^2.0.2",
+    "@angular-eslint/eslint-plugin-template": "^2.0.2",
+    "@angular-eslint/schematics": "^2.0.2",
+    "@angular-eslint/template-parser": "^2.0.2",
+    "@angular/cli": "^11.2.5",
+    "@angular/compiler-cli": "^11.2.6",
+    "@types/jasmine": "^3.6.7",
+    "@types/node": "^14.14.35",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "codelyzer": "^6.0.0",
+    "concat": "^1.0.3",
+    "cpx": "^1.5.0",
+    "eslint": "^7.22.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^32.3.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "fs-extra": "^9.1.0",
+    "jasmine-core": "^3.7.1",
+    "jasmine-spec-reporter": "^6.0.0",
+    "karma": "^6.2.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.2",
+    "karma-jasmine": "^4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^11.2.4",
+    "ts-node": "^9.1.0",
+    "tslint": "^6.1.0",
+    "typescript": "~4.1.5"
   },
   "repository": {
     "type": "git",
