--- a/angular.json
+++ b/angular.json
@@ -193,6 +193,40 @@
         }
       }
     },
+    "demoLinked": {
+    "root": "",
+    "sourceRoot": "demoLinked",
+    "projectType": "application",
+    "prefix": "app",
+    "schematics": {
+      "@schematics/angular:component": {
+        "style": "scss"
+      }
+    },
+    "architect": {
+      "build": {
+        "builder": "@angular-devkit/build-angular:browser",
+        "options": {
+          "aot": true,
+          "outputPath": "dist/container_app",
+          "index": "demoLinked/index.html",
+          "main": "demoLinked/main.ts",
+          "polyfills": "demoLinked/polyfills.ts",
+          "tsConfig": "demoLinked/tsconfig.app.json",
+          "assets": [],
+          "styles": [],
+          "scripts": []
+        },
+        "configurations": {}
+      },
+      "serve": {
+        "builder": "@angular-devkit/build-angular:dev-server",
+        "options": {
+          "browserTarget": "demoLinked:build"
+        }
+      }
+    }
+  },
     "spotfire-wrapper": {
       "root": "projects/spotfire-wrapper",
       "sourceRoot": "projects/spotfire-wrapper/src",
