--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "spotfire-wrapper",
-  "version": "0.15.1",
+  "version": "0.16.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build-webplayer": "ng build spotfire-wrapper --prod && (cd build/spotfire-wrapper/ ; npm pack)",
+    "build-webplayer": "ng build spotfire-wrapper --configuration production && (cd build/spotfire-wrapper/ ; npm pack)",
     "build-wrapper": "npm run build:elements",
     "test": "ng test",
     "lint": "ng lint",
     "publish": "npm publish build/spotfire-wrapper --access public --dry-run",
     "builddev:elements": "ng build  && node build-script.js && wc elements/spotfire-wrapper.js",
-    "build:elements": "ng build --prod && node build-script.js && wc dist/spotfire-wrapper.js",
+    "build:elements": "ng build --configuration production && node build-script.js && wc dist/spotfire-wrapper.js",
     "sptf:watch": "(cd projects/spotfire-wrapper ; ../../node_modules/.bin/tsc -w  --pretty -p tsconfig.schematics.json)",
     "sptf:buildlib": "ng build spotfire-wrapper",
     "sptf:buildschematics": "(cd projects/spotfire-wrapper && npm run build)",
@@ -19,57 +19,62 @@
   },
   "author": "Nicolas Deroche <nderoche@tibco.com> (http://www.tibco.com)",
   "private": true,
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "maintained node versions"
+  ],
   "dependencies": {
-    "@angular/animations": "^11.2.14",
-    "@angular/cdk": "^11.2.13",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/elements": "^11.2.14",
-    "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "^11.2.14",
-    "@angular/material": "^11.2.13",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/animations": "^12.2.11",
+    "@angular/cdk": "^12.2.11",
+    "@angular/common": "^12.2.11",
+    "@angular/compiler": "^12.2.11",
+    "@angular/core": "^12.2.11",
+    "@angular/elements": "^12.2.11",
+    "@angular/flex-layout": "^12.0.0-beta.35",
+    "@angular/forms": "^12.2.11",
+    "@angular/material": "^12.2.11",
+    "@angular/platform-browser": "^12.2.11",
+    "@angular/platform-browser-dynamic": "^12.2.11",
     "@webcomponents/custom-elements": "^1.4.3",
     "rxjs": "^6.6.7",
     "tslib": "^2.3.0",
-    "zone.js": "^0.11.4"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1102.14",
-    "@angular-devkit/build-angular": "^0.1102.14",
-    "@angular-devkit/core": "^11.2.14",
-    "@angular-eslint/builder": "^2.1.1",
-    "@angular-eslint/eslint-plugin": "^2.1.1",
-    "@angular-eslint/eslint-plugin-template": "^2.1.1",
-    "@angular-eslint/schematics": "^2.1.1",
-    "@angular-eslint/template-parser": "^2.1.1",
-    "@angular/cli": "^11.2.14",
-    "@angular/compiler-cli": "^11.2.14",
+    "@angular-devkit/architect": "^0.1202.10",
+    "@angular-devkit/build-angular": "^12.2.11",
+    "@angular-devkit/core": "^12.2.11",
+    "@angular-eslint/builder": "^12.6.1",
+    "@angular-eslint/eslint-plugin": "^12.6.1",
+    "@angular-eslint/eslint-plugin-template": "^12.6.1",
+    "@angular-eslint/schematics": "^12.6.1",
+    "@angular-eslint/template-parser": "^12.6.1",
+    "@angular/cli": "^12.2.11",
+    "@angular/compiler-cli": "^12.2.11",
     "@types/jasmine": "^3.8.1",
-    "@types/node": "^14.17.5",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
+    "@types/node": "^14.17.32",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
     "codelyzer": "^6.0.2",
     "concat": "^1.0.3",
     "cpx": "^1.5.0",
-    "eslint": "^7.30.0",
+    "eslint": "^7.26.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsdoc": "^32.3.4",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "fs-extra": "^9.1.0",
-    "jasmine-core": "^3.8.0",
+    "jasmine-core": "^3.10.1",
     "jasmine-spec-reporter": "^6.0.0",
-    "karma": "^6.3.4",
+    "karma": "^6.3.6",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-reporter": "^3.0.2",
     "karma-jasmine": "^4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^11.2.4",
+    "ng-packagr": "^12.2.5",
     "ts-node": "^9.1.0",
     "tslint": "^6.1.0",
-    "typescript": "~4.1.6"
+    "typescript": "~4.3.5"
   },
   "repository": {
     "type": "git",
