Updated scope to @tibcosoftware

--- a/projects/spotfire-wrapper/schematics/ng-gen-dashboard/files/__name@dasherize__.component.ts.template
+++ b/projects/spotfire-wrapper/schematics/ng-gen-dashboard/files/__name@dasherize__.component.ts.template
@@ -1,4 +1,4 @@
-import { SpotfireViewerComponent, SpotfireCustomization} from '@tibco/spotfire-wrapper';
+import { SpotfireViewerComponent, SpotfireCustomization} from '@tibcosoftware/spotfire-wrapper';
 import { OnInit, Component } from '@angular/core';
 
 @Component({
