--- a/projects/spotfire-wrapper/package.json
+++ b/projects/spotfire-wrapper/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@tibco/spotfire-wrapper",
-  "version": "0.16.0",
+  "name": "@TIBCOSoftware/spotfire-wrapper",
+  "version": "0.16.1",
   "private": false,
   "scripts": {
     "build": "../../node_modules/.bin/tsc -p tsconfig.schematics.json",
