--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spotfire-wrapper",
-  "version": "0.16.0",
+  "version": "0.18.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,7 +10,7 @@
     "lint": "ng lint",
     "publish": "npm publish build/spotfire-wrapper --access public --dry-run",
     "builddev:elements": "ng build  && node build-script.js && wc elements/spotfire-wrapper.js",
-    "build:elements": "ng build --configuration production && node build-script.js && wc dist/spotfire-wrapper.js",
+    "build:elements": "ng build spotfire-wrapper-lib --configuration production && node build-script.js && wc dist/spotfire-wrapper.js",
     "sptf:watch": "(cd projects/spotfire-wrapper ; ../../node_modules/.bin/tsc -w  --pretty -p tsconfig.schematics.json)",
     "sptf:buildlib": "ng build spotfire-wrapper",
     "sptf:buildschematics": "(cd projects/spotfire-wrapper && npm run build)",
